--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 app-footer{
-  position:absolute;                  /* added */
+  position:relative;                  /* added */
   bottom:0;                           /* added */
   left:0;                           /* added */
 }
