--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -1,1 +1,13 @@
-<p>books works!</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <p class="h3 mx-5">Nuestra colección</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <app-show-book></app-show-book>
+    </div>
+  </div>
+
+</div>
