--- a/src/app/components/books/show-book/show-book.component.html
+++ b/src/app/components/books/show-book/show-book.component.html
@@ -1,1 +1,7 @@
-<p>show-book works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3 my-3" *ngFor="let book of books">
+      <app-book-element [book]="book"></app-book-element>
+    </div>
+  </div>
+</div>
