--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mt-3">
   <div class="row">
     <div class="col-12">
       <p class="h3 mx-5">Nuestra colección</p>
