--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
-app-footer{
-  position:relative;                  /* added */
-  bottom:0;                           /* added */
-  left:0;                           /* added */
-}
+app-alerts{
+   position: absolute;
+   z-index: 100;
+ }
