--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="body">
   <app-nav></app-nav>
+  <div class="float-right offset-9">
+    <app-alerts class="col-3 py-1 px-3"></app-alerts>
+  </div>
   <router-outlet></router-outlet>
   <!--
 <app-footer></app-footer>
 -->
-</div>
