--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <span class="h3 mx-5">Nuestra colección</span>
-      <button type="button" class="btn btn-success mx-1 editButton" (click)="createBook()">Crear</button>
+      <button type="button" class="btn btn-success mx-1 editButton" (click)="createBook()"  *ngIf="roleNav == 'ADMINISTRADOR'">Crear</button>
 
     </div>
   </div>
