--- a/src/app/components/index/nav/nav.component.html
+++ b/src/app/components/index/nav/nav.component.html
@@ -11,13 +11,13 @@
       </div>
       <div class="col-6 ">
         <ul class="nav justify-content-end ">
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="roleNav == 'ADMINISTRADOR'">
             <a class="nav-link active" href="/readers">Lectores</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/books">Libros</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="roleNav == 'ADMINISTRADOR'">
             <a class="nav-link" href="/loan">Prestamos</a>
           </li>
           <li class="nav-item">
