--- a/src/app/components/books/show-book/show-book.component.html
+++ b/src/app/components/books/show-book/show-book.component.html
@@ -3,9 +3,9 @@
   <div class="row mb-2 mt-4">
     <div class="col-12">
       <button mat-raised-button color="warn" routerLink="/books">Regresar</button>
-      <button type="button" class="btn btn-secondary mx-1" (click)="editBook()"  *ngIf="roleNav == 'ADMINISTRADOR'">Editar</button>
+      <button type="button" class="btn btn-secondary mx-1" (click)="editBook()"  *ngIf="getRole() == 'ADMINISTRADOR'">Editar</button>
       <button type="button" class="btn btn-success" (click)="loanBook()"
-              *ngIf="this.book.id!=0 && roleNav == 'ADMINISTRADOR'">Pedir libro
+              *ngIf="this.book.id!=0 && getRole() == 'ADMINISTRADOR'">Pedir libro
       </button>
     </div>
   </div>
