--- a/src/app/components/index/nav/nav.component.html
+++ b/src/app/components/index/nav/nav.component.html
@@ -11,17 +11,20 @@
       </div>
       <div class="col-6 ">
         <ul class="nav justify-content-end ">
-          <li class="nav-item" *ngIf="roleNav == 'ADMINISTRADOR'">
+          <li class="nav-item" *ngIf="getRole() == 'ADMINISTRADOR'">
             <a class="nav-link active" href="/readers">Lectores</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/books">Libros</a>
           </li>
-          <li class="nav-item" *ngIf="roleNav == 'ADMINISTRADOR'">
+          <li class="nav-item" *ngIf="getRole()  == 'ADMINISTRADOR'">
             <a class="nav-link" href="/loan">Prestamos</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="getRole()  != 'ADMINISTRADOR'">
             <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item" *ngIf="getRole()  == 'ADMINISTRADOR'">
+            <a class="nav-link" (click)="logout()">Logout</a>
           </li>
         </ul>
       </div>
