--- a/src/app/components/loan/loan.component.html
+++ b/src/app/components/loan/loan.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <span class="h3 mx-5">Prestamos</span>
-      <button type="button" class="btn btn-success mx-1 editButton" (click)="createLoan()"  *ngIf="getRole()  == 'ADMINISTRADOR'">Crear</button>
+      <button type="button" class="btn btn-success mx-1 editButton w-25" (click)="createLoan()"  *ngIf="getRole()  == 'ADMINISTRADOR'">Crear</button>
     </div>
   </div>
 
