--- a/src/app/components/loan/create-loan/create-loan.component.html
+++ b/src/app/components/loan/create-loan/create-loan.component.html
@@ -9,6 +9,49 @@
 
   <div class="row">
     <div class="col-12 my-2">
+      <span class="h3">Fechas</span>
+    </div>
+    <div class="col-12 my-2">
+      <mat-form-field appearance="fill" class="w-100">
+        <mat-label>Selecciona las fechas del prestamo</mat-label>
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+          <input matStartDate formControlName="start" placeholder="Start date">
+          <input matEndDate formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+
+        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Fecha de inicio invalida</mat-error>
+        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Fecha de entrega invalida</mat-error>
+      </mat-form-field>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-12 my-2">
+      <span class="h3">Libro</span>
+    </div>
+
+    <div class="col-12 my-2" *ngIf="selectedBook.id==0">
+      <app-show-books-table [books]="books" (getSelectedBook)="bookSelected($event)"></app-show-books-table>
+    </div>
+    <div class="col-12 my-2" *ngIf="selectedBook.id!=0">
+      <div class="row">
+        <button type="button" class="btn btn-warning editButton w-25" (click)="selectOtherBook()">Seleccionar otro
+          Libro
+        </button>
+      </div>
+      <div class="row">
+        <app-book-info [book]="selectedBook"></app-book-info>
+      </div>
+      <br>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 my-2">
       <span class="h3">Lector</span>
     </div>
 
@@ -17,14 +60,15 @@
     </div>
     <div class="col-12 my-2" *ngIf="selectedReader.id!=0">
       <div class="row">
-        <button type="button" class="btn btn-warning editButton w-25" (click)="selectOtherReader()">Seleccionar otro Lector</button>
+        <button type="button" class="btn btn-warning editButton w-25" (click)="selectOtherReader()">Seleccionar otro
+          Lector
+        </button>
       </div>
       <div class="row">
 
         <app-show-reader-info [reader]="selectedReader"></app-show-reader-info>
       </div>
       <br>
-
     </div>
   </div>
 </div>
