--- a/src/app/components/books/create-books/create-books.component.html
+++ b/src/app/components/books/create-books/create-books.component.html
@@ -3,8 +3,8 @@
 
     <div class="row mb-2 mt-3">
       <div class="col-12">
-        <button mat-raised-button color="warn" routerLink="/books">Regresar</button>
-        <button type="button" class="btn btn-success mx-3" (click)="saveBook()">Guardar</button>
+        <button mat-raised-button class="btn btn-danger mx-3 w-25" color="warn" routerLink="/books">Regresar</button>
+        <button type="button" class="btn btn-success mx-3 w-25" (click)="saveBook()">Guardar</button>
       </div>
     </div>
 
