--- a/src/app/components/readers/readers.component.html
+++ b/src/app/components/readers/readers.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <span class="h3 mx-5">Nuestros lectores</span>
-      <button type="button" class="btn btn-success mx-1 editButton" (click)="createReader()"
+      <button type="button" class="btn btn-success mx-1 editButton w-25" (click)="createReader()"
               *ngIf="getRole()  == 'ADMINISTRADOR'">Crear
       </button>
 
