--- a/src/app/components/loan/create-loan/create-loan.component.html
+++ b/src/app/components/loan/create-loan/create-loan.component.html
@@ -2,7 +2,7 @@
 
   <div class="row mb-2 mt-3">
     <div class="col-12">
-      <button mat-raised-button color="warn" routerLink="/loan" class="w-25">Regresar</button>
+      <button mat-raised-button class="btn btn-danger mx-3 w-25" color="warn" routerLink="/loan" class="w-25">Regresar</button>
       <button type="button" class="btn btn-success mx-3 w-25" (click)="saveLoan()">Guardar</button>
     </div>
   </div>
