--- a/src/app/components/index/landing/landing.component.html
+++ b/src/app/components/index/landing/landing.component.html
@@ -1,3 +1,19 @@
-<p>{{library.name}}</p>
-<p>{{library.address}}</p>
-<p>{{library.phone}}</p>
+<div class="container-fluid">
+  <img src="./assets/Logo%20sin%20fondo.png" class="rounded mx-auto d-block w-25 h-25" alt="Management Library Logo">
+
+  <div class="row mt-3">
+    <div class="col-12 text-center">
+      <span class="text-center h1">{{library.name}}</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 text-center">
+      <span class="text-center h2">{{library.address}}</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 text-center">
+      <span class="text-center h2">{{library.phone}}</span>
+    </div>
+  </div>
+</div>
