--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
 
     <div class="row">
       <div class="col-6 offset-3">
-        <button type="button" class="btn btn-success w-100" (click)="submitLogin()">Guardar</button>
+        <button type="button" class="btn btn-success w-100" (click)="submitLogin()">Submit</button>
       </div>
     </div>
   </div>
